postgresql-common (53) unstable; urgency=low

  * Add Russian debconf translation, thanks to Yuriy Talakan'
    <yt@amur.elektra.ru>! Closes: #367152

 -- Martin Pitt <mpitt@debian.org>  Sun, 14 May 2006 13:24:34 +0200

postgresql-common (52) unstable; urgency=low

  * Bump Standards-Version to 3.7.2.
  * Merge support for system wide snakeoil SSL certificate from Ubuntu branch
    and eliminate our custom SSL certificate juggling:
    - debian/control:
      + Depend on ssl-cert which provides snakeoil cert and the ssl-cert
        group.
      + Remove Recommends: openssl.
    - debian/postgresql-common.postinst:
      + Remove generation of PostgreSQL specific SSL certificate.
      + Add postgres user to the ssl-cert group on upgrades to this version or
        on fresh installs.
    - pg_createcluster:
      + Adapt cert/key paths to snakeoil.
      + Update manpage documentation POD.
      + Enable SSL only if SSL key can be accessed with the cluster owner's
        privileges.
    - debian/README.Debian: Update documentation of SSL certificate handling.

 -- Martin Pitt <mpitt@debian.org>  Fri, 12 May 2006 22:25:49 +0200

postgresql-common (51) unstable; urgency=low

  * PgCommon.pm: Add function read_pg_hba() to parse pg_hba.conf.
  * Add t/005_PgCommon.t: Designated for testing PgCommon.pm library
    functions; test read_pg_hba() for now.
  * pg_ctlcluster: Check pg_hba.conf if the database superuser can connect
    locally without a password. If not, disable startup checks to avoid asking
    for the superuser password. (https://launchpad.net/bugs/37640)
  * t/030_errors.t: Test above pg_ctlcluster checks.

 -- Martin Pitt <mpitt@debian.org>  Mon,  1 May 2006 14:38:53 +0200

postgresql-common (50) unstable; urgency=low

  * t/030_errors.t: Check that pg_wrapper and administration programs give
    sane error messages instead of 'Invalid symbolic link blabla' for a
    nonexisting cluster.