@@ -2,8 +2,17 @@ postgresql-common (53) unstable; urgency=low
 
   * Add Russian debconf translation, thanks to Yuriy Talakan'
     <yt@amur.elektra.ru>! Closes: #367152
+  * t/001_packages.t: Check that the locales used in the tests are installed
+    so that the test suite fails early if not.
+  * t/050_encodings.t, t/060_obsolete_confparams.t: Use ru_RU{,.UTF-8} for
+    tests, since they have more potential for failure.
+  * t/050_encodings.t:
+    - Add check for https://launchpad.net/bugs/39177: Correct encoding of
+      server error messages under various locales.
+    - Add check for bug #343057: Correct startup if client_encoding and
+      lc_messages settings do not match.
 
- -- Martin Pitt <mpitt@debian.org>  Sun, 14 May 2006 13:24:34 +0200
+ -- Martin Pitt <mpitt@debian.org>  Fri, 19 May 2006 18:44:47 +0200
 
 postgresql-common (52) unstable; urgency=low
 
